src/codegen/tests/snapshots/rusty__codegen__tests__function_tests__argument_fed_by_ref_then_by_val.snap
---
source: src/codegen/tests/function_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

define i32 @main() {
entry:
  %main = alloca i32, align [filtered]
  %arr = alloca [5 x i32], align [filtered]
  %0 = bitcast [5 x i32]* %arr to i8*
  call void @llvm.memset.p0i8.i64(i8* align [filtered] %0, i8 0, i64 ptrtoint ([5 x i32]* getelementptr ([5 x i32], [5 x i32]* null, i32 1) to i64), i1 false)
  store i32 0, i32* %main, align [filtered]
  %1 = bitcast [5 x i32]* %arr to i32*
  %call = call i32 @fn_by_ref(i32* %1)
  %main_ret = load i32, i32* %main, align [filtered]
  ret i32 %main_ret
}

define i32 @fn_by_ref(i32* %0) {
entry:
  %fn_by_ref = alloca i32, align [filtered]
  %arg_by_ref = alloca i32*, align [filtered]
  store i32* %0, i32** %arg_by_ref, align [filtered]
  store i32 0, i32* %fn_by_ref, align [filtered]
  %deref = load i32*, i32** %arg_by_ref, align [filtered]
  %call = call i32 @fn_by_val(i32* %deref)
  %fn_by_ref_ret = load i32, i32* %fn_by_ref, align [filtered]
  ret i32 %fn_by_ref_ret
}

define i32 @fn_by_val(i32* %0) {
entry:
  %fn_by_val = alloca i32, align [filtered]
  %arg_by_val = alloca [5 x i32], align [filtered]
  %bitcast = bitcast [5 x i32]* %arg_by_val to i32*
  %1 = bitcast i32* %bitcast to i8*
  %2 = bitcast i32* %0 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align [filtered] %1, i8* align [filtered] %2, i64 ptrtoint ([5 x i32]* getelementptr ([5 x i32], [5 x i32]* null, i32 1) to i64), i1 false)
  store i32 0, i32* %fn_by_val, align [filtered]
  %fn_by_val_ret = load i32, i32* %fn_by_val, align [filtered]
  ret i32 %fn_by_val_ret
}

; Function Attrs: argmemonly nofree nounwind willreturn writeonly
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #0

; Function Attrs: argmemonly nofree nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

attributes #0 = { argmemonly nofree nounwind willreturn writeonly }
attributes #1 = { argmemonly nofree nounwind willreturn }
