src/codegen/tests/snapshots/rusty__codegen__tests__function_tests__autocast_argument_literals_for_function_call.snap
---
source: src/codegen/tests/function_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%main = type {}

@main_instance = global %main zeroinitializer

define i32 @func(i8* %0, i16* %1, i32* %2, i64* %3, float* %4, double* %5) {
entry:
  %func = alloca i32, align [filtered]
  %byInt1 = alloca i8*, align [filtered]
  store i8* %0, i8** %byInt1, align [filtered]
  %byInt2 = alloca i16*, align [filtered]
  store i16* %1, i16** %byInt2, align [filtered]
  %byInt3 = alloca i32*, align [filtered]
  store i32* %2, i32** %byInt3, align [filtered]
  %byInt4 = alloca i64*, align [filtered]
  store i64* %3, i64** %byInt4, align [filtered]
  %byReal1 = alloca float*, align [filtered]
  store float* %4, float** %byReal1, align [filtered]
  %byReal2 = alloca double*, align [filtered]
  store double* %5, double** %byReal2, align [filtered]
  store i32 0, i32* %func, align [filtered]
  store i32 1, i32* %func, align [filtered]
  %func_ret = load i32, i32* %func, align [filtered]
  ret i32 %func_ret
}

define void @main(%main* %0) {
entry:
  %1 = alloca i8, align [filtered]
  store i8 1, i8* %1, align [filtered]
  %2 = alloca i16, align [filtered]
  store i16 2, i16* %2, align [filtered]
  %3 = alloca i32, align [filtered]
  store i32 3, i32* %3, align [filtered]
  %4 = alloca i64, align [filtered]
  store i64 4, i64* %4, align [filtered]
  %5 = alloca float, align [filtered]
  store float 5.000000e+00, float* %5, align [filtered]
  %6 = alloca double, align [filtered]
  store double 6.000000e+00, double* %6, align [filtered]
  %call = call i32 @func(i8* %1, i16* %2, i32* %3, i64* %4, float* %5, double* %6)
  ret void
}
