src/codegen/tests/snapshots/rusty__codegen__tests__function_tests__bitcast_argument_references_for_function_call.snap
---
source: src/codegen/tests/function_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%main = type { i8, i8, i16, i16, i32, i32, i64, i64, float, float, double, double }

@main_instance = global %main { i8 1, i8 1, i16 2, i16 2, i32 3, i32 3, i64 4, i64 4, float 5.000000e+00, float 5.000000e+00, double 6.000000e+00, double 6.000000e+00 }

define signext i8 @fn_sint(ptr %0, ptr %1) {
entry:
  %fn_sint = alloca i8, align [filtered]
  %in_ref = alloca ptr, align [filtered]
  store ptr %0, ptr %in_ref, align [filtered]
  %in_out = alloca ptr, align [filtered]
  store ptr %1, ptr %in_out, align [filtered]
  store i8 0, ptr %fn_sint, align [filtered]
  %fn_sint_ret = load i8, ptr %fn_sint, align [filtered]
  ret i8 %fn_sint_ret
}

define i64 @fn_lint(ptr %0, ptr %1) {
entry:
  %fn_lint = alloca i64, align [filtered]
  %in_ref = alloca ptr, align [filtered]
  store ptr %0, ptr %in_ref, align [filtered]
  %in_out = alloca ptr, align [filtered]
  store ptr %1, ptr %in_out, align [filtered]
  store i64 0, ptr %fn_lint, align [filtered]
  %fn_lint_ret = load i64, ptr %fn_lint, align [filtered]
  ret i64 %fn_lint_ret
}

define i64 @fn_real(ptr %0, ptr %1) {
entry:
  %fn_real = alloca i64, align [filtered]
  %in_ref = alloca ptr, align [filtered]
  store ptr %0, ptr %in_ref, align [filtered]
  %in_out = alloca ptr, align [filtered]
  store ptr %1, ptr %in_out, align [filtered]
  store i64 0, ptr %fn_real, align [filtered]
  %fn_real_ret = load i64, ptr %fn_real, align [filtered]
  ret i64 %fn_real_ret
}

define i64 @fn_lreal(ptr %0, ptr %1) {
entry:
  %fn_lreal = alloca i64, align [filtered]
  %in_ref = alloca ptr, align [filtered]
  store ptr %0, ptr %in_ref, align [filtered]
  %in_out = alloca ptr, align [filtered]
  store ptr %1, ptr %in_out, align [filtered]
  store i64 0, ptr %fn_lreal, align [filtered]
  %fn_lreal_ret = load i64, ptr %fn_lreal, align [filtered]
  ret i64 %fn_lreal_ret
}

define void @main(ptr %0) {
entry:
  %var1_sint = getelementptr inbounds nuw %main, ptr %0, i32 0, i32 0
  %var2_sint = getelementptr inbounds nuw %main, ptr %0, i32 0, i32 1
  %var1_int = getelementptr inbounds nuw %main, ptr %0, i32 0, i32 2
  %var2_int = getelementptr inbounds nuw %main, ptr %0, i32 0, i32 3
  %var1_dint = getelementptr inbounds nuw %main, ptr %0, i32 0, i32 4
  %var2_dint = getelementptr inbounds nuw %main, ptr %0, i32 0, i32 5
  %var1_lint = getelementptr inbounds nuw %main, ptr %0, i32 0, i32 6
  %var2_lint = getelementptr inbounds nuw %main, ptr %0, i32 0, i32 7
  %var1_real = getelementptr inbounds nuw %main, ptr %0, i32 0, i32 8
  %var2_real = getelementptr inbounds nuw %main, ptr %0, i32 0, i32 9
  %var1_lreal = getelementptr inbounds nuw %main, ptr %0, i32 0, i32 10
  %var2_lreal = getelementptr inbounds nuw %main, ptr %0, i32 0, i32 11
  %call = call signext i8 @fn_sint(ptr %var1_sint, ptr %var2_sint)
  %call1 = call signext i8 @fn_sint(ptr %var1_int, ptr %var2_int)
  %call2 = call signext i8 @fn_sint(ptr %var1_dint, ptr %var2_dint)
  %call3 = call signext i8 @fn_sint(ptr %var1_lint, ptr %var2_lint)
  %call4 = call i64 @fn_lint(ptr %var1_sint, ptr %var2_sint)
  %call5 = call i64 @fn_lint(ptr %var1_int, ptr %var2_int)
  %call6 = call i64 @fn_lint(ptr %var1_dint, ptr %var2_dint)
  %call7 = call i64 @fn_lint(ptr %var1_lint, ptr %var2_lint)
  %call8 = call i64 @fn_real(ptr %var1_real, ptr %var2_real)
  %call9 = call i64 @fn_real(ptr %var1_lreal, ptr %var2_lreal)
  %call10 = call i64 @fn_lreal(ptr %var1_real, ptr %var2_real)
  %call11 = call i64 @fn_lreal(ptr %var1_lreal, ptr %var2_lreal)
  ret void
}
