src/codegen/tests/snapshots/rusty__codegen__tests__function_tests__function_with_ref_sized_string_varargs_called_in_program.snap
---
source: src/codegen/tests/function_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%prg = type { i32 }

@prg_instance = global %prg zeroinitializer
@utf08_literal_0 = private unnamed_addr constant [2 x i8] c"a\00"
@utf08_literal_1 = private unnamed_addr constant [4 x i8] c"abc\00"
@utf08_literal_2 = private unnamed_addr constant [7 x i8] c"abcdef\00"

declare i32 @foo(i32, i8**)

define void @prg(%prg* %0) {
entry:
  %x = getelementptr inbounds %prg, %prg* %0, i32 0, i32 0
  %1 = alloca [3 x i8*], align [filtered]
  %2 = getelementptr inbounds [3 x i8*], [3 x i8*]* %1, i32 0, i32 0
  store i8* getelementptr inbounds ([2 x i8], [2 x i8]* @utf08_literal_0, i32 0, i32 0), i8** %2, align [filtered]
  %3 = getelementptr inbounds [3 x i8*], [3 x i8*]* %1, i32 0, i32 1
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @utf08_literal_1, i32 0, i32 0), i8** %3, align [filtered]
  %4 = getelementptr inbounds [3 x i8*], [3 x i8*]* %1, i32 0, i32 2
  store i8* getelementptr inbounds ([7 x i8], [7 x i8]* @utf08_literal_2, i32 0, i32 0), i8** %4, align [filtered]
  %5 = bitcast [3 x i8*]* %1 to i8**
  %call = call i32 @foo(i32 3, i8** %5)
  store i32 %call, i32* %x, align [filtered]
  ret void
}
