src/codegen/tests/snapshots/rusty__codegen__tests__function_tests__function_with_sized_varargs_called_in_program.snap
---
source: src/codegen/tests/function_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%prg = type { i32 }

@prg_instance = global %prg zeroinitializer

declare i32 @foo(i32, i32*)

define void @prg(%prg* %0) {
entry:
  %x = getelementptr inbounds %prg, %prg* %0, i32 0, i32 0
  %load_x = load i32, i32* %x, align [filtered]
  %tmpVar = add i32 %load_x, 1
  %1 = alloca [3 x i32], align [filtered]
  %2 = getelementptr inbounds [3 x i32], [3 x i32]* %1, i32 0, i32 0
  store i32 0, i32* %2, align [filtered]
  %3 = getelementptr inbounds [3 x i32], [3 x i32]* %1, i32 0, i32 1
  store i32 3, i32* %3, align [filtered]
  %4 = getelementptr inbounds [3 x i32], [3 x i32]* %1, i32 0, i32 2
  store i32 %tmpVar, i32* %4, align [filtered]
  %5 = bitcast [3 x i32]* %1 to i32*
  %call = call i32 @foo(i32 3, i32* %5)
  store i32 %call, i32* %x, align [filtered]
  ret void
}
