src/codegen/tests/snapshots/rusty__codegen__tests__function_tests__function_with_varargs_called_in_program.snap
---
source: src/codegen/tests/function_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%prg = type { i32 }

@prg_instance = global %prg zeroinitializer

declare i32 @foo(...)

define void @prg(ptr %0) {
entry:
  %x = getelementptr inbounds nuw %prg, ptr %0, i32 0, i32 0
  %load_x = load i32, ptr %x, align [filtered]
  %tmpVar = add i32 %load_x, 1
  %call = call i32 (...) @foo(i32 0, i32 3, i32 %tmpVar, ptr null)
  store i32 %call, ptr %x, align [filtered]
  ret void
}
