src/codegen/tests/snapshots/rusty__codegen__tests__function_tests__member_variables_in_body.snap
---
source: src/codegen/tests/function_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

define i32 @func(i16 %0, ptr %1, ptr %2) {
entry:
  %func = alloca i32, align [filtered]
  %i = alloca i16, align [filtered]
  store i16 %0, ptr %i, align [filtered]
  %io = alloca ptr, align [filtered]
  store ptr %1, ptr %io, align [filtered]
  %o = alloca ptr, align [filtered]
  store ptr %2, ptr %o, align [filtered]
  %v = alloca i16, align [filtered]
  %vt = alloca i16, align [filtered]
  store i16 1, ptr %v, align [filtered]
  store i16 2, ptr %vt, align [filtered]
  store i32 0, ptr %func, align [filtered]
  %3 = load ptr, ptr %o, align [filtered]
  store i64 0, ptr %3, align [filtered]
  %load_i = load i16, ptr %i, align [filtered]
  %4 = sext i16 %load_i to i32
  %deref = load ptr, ptr %io, align [filtered]
  %load_io = load i8, ptr %deref, align [filtered]
  %5 = sext i8 %load_io to i32
  %tmpVar = mul i32 %4, %5
  %6 = sext i32 %tmpVar to i64
  %deref1 = load ptr, ptr %o, align [filtered]
  %load_o = load i64, ptr %deref1, align [filtered]
  %tmpVar2 = sub i64 %6, %load_o
  %load_v = load i16, ptr %v, align [filtered]
  %7 = sext i16 %load_v to i32
  %load_vt = load i16, ptr %vt, align [filtered]
  %8 = sext i16 %load_vt to i32
  %tmpVar3 = mul i32 %7, %8
  %9 = sext i32 %tmpVar3 to i64
  %tmpVar4 = add i64 %tmpVar2, %9
  %10 = trunc i64 %tmpVar4 to i32
  store i32 %10, ptr %func, align [filtered]
  %func_ret = load i32, ptr %func, align [filtered]
  ret i32 %func_ret
}
