src/codegen/tests/snapshots/rusty__codegen__tests__function_tests__on_functions_var_in_out_should_be_passed_as_a_pointer.snap
---
source: src/codegen/tests/function_tests.rs
expression: result
---
; ModuleID = 'main'
source_filename = "main"

define i32 @bump(i8* %0) {
entry:
  %v = alloca i8*, align 8
  store i8* %0, i8** %v, align 8
  %bump = alloca i32, align 4
  store i32 0, i32* %bump, align 4
  %deref = load i8*, i8** %v, align 8
  %load_v = load i8, i8* %deref, align 1
  %1 = sext i8 %load_v to i32
  store i32 %1, i32* %bump, align 4
  %deref1 = load i8*, i8** %v, align 8
  store i8 7, i8* %deref1, align 1
  %bump_ret = load i32, i32* %bump, align 4
  ret i32 %bump_ret
}

