src/codegen/tests/snapshots/rusty__codegen__tests__function_tests__on_functions_var_output_should_be_passed_as_a_pointer.snap
---
source: src/codegen/tests/function_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

define i32 @bump(ptr %0) {
entry:
  %bump = alloca i32, align [filtered]
  %v = alloca ptr, align [filtered]
  store ptr %0, ptr %v, align [filtered]
  store i32 0, ptr %bump, align [filtered]
  %1 = load ptr, ptr %v, align [filtered]
  store i8 0, ptr %1, align [filtered]
  store i32 1, ptr %bump, align [filtered]
  %deref = load ptr, ptr %v, align [filtered]
  store i8 2, ptr %deref, align [filtered]
  %bump_ret = load i32, ptr %bump, align [filtered]
  ret i32 %bump_ret
}
